--- a/client/mean-chat/src/app/components/create-group-chat-form/create-group-chat-form.component.html
+++ b/client/mean-chat/src/app/components/create-group-chat-form/create-group-chat-form.component.html
@@ -1,4 +1,4 @@
-<mat-card class="create-group-chat-form">
+<!-- <mat-card class="create-group-chat-form"> -->
   <div class="form-group">
     <label for="new_group_name">Title: </label>
     <input
@@ -41,9 +41,9 @@
   <button
     mat-raised-button
     color="primary"
-    class="action-button create-button"
+    class="create-chat-button"
     (click)="createGroupChat()"
   >
     Create
   </button>
-</mat-card>
+<!-- </mat-card> -->
