--- a/client/mean-chat/src/app/components/display-chat-list/display-chat-list.component.html
+++ b/client/mean-chat/src/app/components/display-chat-list/display-chat-list.component.html
@@ -1,4 +1,4 @@
-<div class="chat-list">
+<mat-card class="chat-list">
   <div *ngIf="currentUser">
     <div *ngIf="isChatRoomObjectArray(currentUser.chatrooms)">
       <div
@@ -36,4 +36,4 @@
       </div>
     </div>
   </div>
-</div>
+</mat-card>
