--- a/client/mean-chat/src/app/components/chat-list/chat-list.component.css
+++ b/client/mean-chat/src/app/components/chat-list/chat-list.component.css
@@ -1,7 +1,3 @@
-.create-group-chat-form {
-  margin-top: 20px;
-}
-
 .participants-list {
   list-style: none;
   padding: 0;
@@ -12,17 +8,26 @@
 }
 
 .chat-list {
-  margin-top: 20px;
+  /* margin-top: 20px; */
+  padding: 0px;
 }
 
 .chat-list-item {
   border: 1px solid #ddd;
   padding: 10px;
-  margin: 10px 0;
+  margin-bottom: 10px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 .chat-list-item:hover {
   background-color: #f5f5f5;
+}
+
+.chat-list-section-content {
+  background-color: rgb(192, 192, 192);
+}
+
+.new-chat-button {
+  margin-bottom: 5px;
 }
