--- a/client/mean-chat/src/app/components/contacts-list/contacts-list.component.css
+++ b/client/mean-chat/src/app/components/contacts-list/contacts-list.component.css
@@ -1,7 +1,8 @@
 .contacts-list {
-  height: 65vh;
+  /* height: 65vh; */
   overflow-y: auto;
-  padding-right: 5px;
+  padding: 10px 5px 0px 5px;
+  background-color: rgb(66, 66, 66);
 }
 
 .contacts-list li {
@@ -17,7 +18,6 @@
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 10px;
-  margin-top: 10px;
   margin-bottom: 10px;
   cursor: pointer;
   transition: background-color 0.3s;
