--- a/client/mean-chat/src/app/components/contacts/contacts.component.css
+++ b/client/mean-chat/src/app/components/contacts/contacts.component.css
@@ -24,3 +24,8 @@
 .add-new-contact-button {
   margin-bottom: 5px;
 }
+
+.contacts-section-content {
+  background-color: rgb(192, 192, 192);
+  padding: 15px;
+}
