--- a/client/mean-chat/src/app/components/new-contact-form/new-contact-form.component.css
+++ b/client/mean-chat/src/app/components/new-contact-form/new-contact-form.component.css
@@ -1,6 +1,19 @@
+.new-contact-form {
+  background-color: rgb(192, 192, 192);
+  color: #333333;
+  margin-top: 5px;
+  padding: 5px;
+}
+
+.new-contact-form h2 {
+  color: #333333;
+}
+
 .found-users {
   height: 50vh;
   overflow-y: auto;
+  background-color: rgb(66, 66, 66);
+  padding: 5px;
 }
 
 .found-user-item {
