--- a/client/mean-chat/src/app/components/contacts-list/contacts-list.component.css
+++ b/client/mean-chat/src/app/components/contacts-list/contacts-list.component.css
@@ -3,6 +3,7 @@
   overflow-y: auto;
   padding: 10px 5px 0px 5px;
   background-color: rgb(66, 66, 66);
+  max-height: 62vh;
 }
 
 .contacts-list li {
