--- a/client/mean-chat/src/app/components/home/home.component.css
+++ b/client/mean-chat/src/app/components/home/home.component.css
@@ -7,6 +7,26 @@
 
 .home-top {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   padding: 5px;
+  background-color: rgb(66, 66, 66);
+}
+
+.welcome-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-left: 25px;
+  /* margin: 0px; */
+}
+
+.welcome-message {
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(194, 24, 91);
+  font-size: large;
+  font-weight: bold;
 }
